--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
     "php": ">=5.4.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "7.0",
-    "laravel/laravel": "5.*",
+    "phpunit/phpunit": "^8.5",
+    "laravel/framework": "^7.0",
     "nunomaduro/collision": "^2.0",
     "beyondcode/laravel-dump-server": "~1.0"
   },
